Fixing CSS overflow issues.

--- a/Server/static/styles/hands.css
+++ b/Server/static/styles/hands.css
@@ -7,7 +7,7 @@
 html {
      #background: #35654d !important;
     background: #222 !important;
-    overflow: hidden;
+    overflow: auto;
 
 }
 
